fix feed button alignment and style

--- a/karl/views/static/ux2/css/elements/contentfeeds.less
+++ b/karl/views/static/ux2/css/elements/contentfeeds.less
@@ -146,6 +146,8 @@
       font-size: 0.75em;
       text-decoration: none;
       outline: 0;
+      margin-top: 5px;
+      line-height: 1.533em;
     }
 }
 #poll-indicator {
