--- a/karl/views/static/ux2/css/main.css
+++ b/karl/views/static/ux2/css/main.css
@@ -1108,6 +1108,8 @@ div[data-quickpanel='quickpanel'] {
   font-size: 0.75em;
   text-decoration: none;
   outline: 0;
+  margin-top: 5px;
+  line-height: 1.533em;
 }
 #poll-indicator {
   cursor: pointer;
